@@ -25,21 +25,52 @@
 #include <stdio.h>
 #include "epl_job.h"
 
+/* put here for efficiency */
+static unsigned char blank_stripe[] = {
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+  0xa0, 0x1d, 0x74, 0x03, 0x0e, 0x80, 0x01, 0xd0, 0x40, 0x3a, 0xe8, 0x07, 0x1d, 0x00, 0x03, 0xa0, 
+  0x80, 0x74, 0xd0, 0x0e, 0x3a, 0x01, 0x07, 0x40, 0x00, 0xe8,
+};
+
+
 int epl_print_stripe(EPL_job_info *epl_job_info, typ_stream *stream, int stripe_number)
 {
   char temp_string[256];
   char *ts;
   int count;
   int e;
+  int total_stripe = (epl_job_info->pixel_v + 64 - 1) / 64;
 
 #ifdef EPL_DEBUG
   fprintf(stderr, "EPL print stripe\n");
 #endif
-
+  (epl_job_info->stripes_sent_this_page)++;
+  (epl_job_info->bytes_sent_this_page) += stream->count;
+  
+  if (104 * (total_stripe - stripe_number) >
+      (epl_job_info->free_mem_last_update - epl_job_info->bytes_sent_this_page))
+    {
+      int idx = 0;
+      fprintf(stderr, "Stripe %i is going critical\n", stripe_number);
+      /* it may be wise to poll here, but then, it may be not */
+#ifdef PRINT_AS_MUCH_AS_POSSIBLE_ON_LOW_MEMORY
+      stream->count = 104;
+      for (idx =0 ; idx < 104; idx++)
+	{
+      *(stream->start + idx) = blank_stripe[idx];
+	}
+#endif
+    }
   /* this part does the model-dependent stripe header */
 
   ts = temp_string;
   count = stream->count;
+
   if(epl_job_info->model == MODEL_5700L) 
     {
       ts += sprintf(ts, "%c%c%c%c%c%c%c",
